# quompass

./: .gitignore  CLAUDE.md  README.md  design_discussion.md  implementation-plan.md  portable-qre-prompt.md  prompt.md  pyproject.toml
.claude/: settings.json
2025-12-05/: architectural-decisions.md  progress-summary.md
docs/: 2026-02-27 11-36 - Fornari, Marco - RE_ reminder - send pointers for quantum res.msg  QA.md  Quantum Resource Estimation Tools.docx  design.md  optimization-algo.md  user-guide.md  walkthrough-neutral-atom.md
examples/: custom_hardware.yaml  custom_qec.yaml  lp_qldpc.yaml  neutral_atom.yaml  quick_start.py  shor_2048.yaml  shor_2048_gidney2025.yaml
public/: README.md
public/docs/: design.md
public/src/quompass/backends/: __init__.py  mock.py
public/src/quompass/backends/azure/: result_map.py
public/src/quompass/backends/mqt/: adapter.py
public/src/quompass/backends/pyliqtr/: adapter.py
public/src/quompass/cli/: estimate.py  main.py
public/src/quompass/core/: error_budget.py  qec.py  results.py
public/src/quompass/exploration/: __init__.py
public/src/quompass/templates/: base.py  grover.py
public/src/quompass/viz/: exploration.py
public/tests/unit/: test_azure_adapter.py  test_formula_qec.py  test_qec.py  test_registry.py  test_serialization.py  test_validation.py
src/ftqre/: __init__.py
src/ftqre.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ftqre/backends/: base.py  mock.py  registry.py
src/ftqre/backends/azure/: adapter.py  param_map.py  result_map.py
src/ftqre/backends/mqt/: __init__.py  adapter.py
src/ftqre/backends/pyliqtr/: adapter.py
src/ftqre/backends/qualtran/: __init__.py  adapter.py  bloq_bridge.py  cost_extract.py
src/ftqre/cli/: catalog.py  estimate.py  explore.py  main.py  optimize.py
src/ftqre/core/: algorithm.py  error_budget.py  hardware.py  qec.py  results.py  types.py
src/ftqre/exploration/: __init__.py  explorer.py  pareto.py  sensitivity.py  space.py
src/ftqre/io/: __init__.py
src/ftqre/optimization/: __init__.py  callback.py  optimizer.py  problem.py  space.py
src/ftqre/templates/: __init__.py  base.py  chemistry.py  grover.py  hamiltonian_sim.py  qpe.py  registry.py  shor.py
src/ftqre/viz/: exploration.py  summary.py
src/quompass/: __init__.py
src/quompass/backends/: base.py  mock.py  registry.py
src/quompass/backends/azure/: __init__.py  adapter.py  param_map.py  result_map.py
src/quompass/backends/pyliqtr/: __init__.py
src/quompass/backends/qualtran/: adapter.py  bloq_bridge.py  cost_extract.py
src/quompass/cli/: catalog.py  explore.py  optimize.py
src/quompass/core/: __init__.py  algorithm.py  error_budget.py  hardware.py  qec.py  types.py
src/quompass/exploration/: explorer.py  pareto.py  sensitivity.py  space.py
src/quompass/io/: __init__.py
src/quompass/optimization/: __init__.py  optimizer.py  problem.py  space.py
src/quompass/plugins/: __init__.py
src/quompass/templates/: __init__.py  chemistry.py  hamiltonian_sim.py  qpe.py  registry.py  shor.py
src/quompass/viz/: summary.py
tests/: conftest.py
tests/integration/: test_azure_backend.py  test_end_to_end.py  test_exploration_e2e.py  test_optimization_e2e.py  test_qualtran_backend.py
tests/unit/: test_algorithm.py  test_azure_adapter.py  test_cli.py  test_error_budget.py  test_error_paths.py  test_estimate.py  test_explorer.py  test_formula_qec.py  test_hardware.py  test_io.py  test_mock_backend.py  test_mqt_stub.py  test_neutral_atom.py  test_new_templates.py  test_optimization.py  test_pareto.py  test_pyliqtr_stub.py  test_qec.py  test_qualtran_unit.py  test_registry.py  test_sensitivity.py  test_serialization.py  test_templates.py  test_viz.py
