[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quompass"
version = "0.1.0"
description = "Portable Fault-Tolerant Quantum Resource Estimation"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "DOE Quantum Center"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
qualtran = ["qualtran>=0.4"]
azure = ["qsharp>=1.0"]
pyliqtr = ["pyLIQTR>=0.3"]
mqt = ["mqt.core>=2.0"]
viz = ["matplotlib>=3.7", "plotly>=5.15"]
optimize = ["pymoo>=0.6"]
all = ["quompass[qualtran,azure,pyliqtr,mqt,viz,optimize]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
quompass = "quompass.cli.main:app"

[project.entry-points."quompass.logical_estimators"]
mock = "quompass.backends.mock:MockLogicalEstimator"
qualtran = "quompass.backends.qualtran.adapter:QualtranLogicalEstimator"
pyliqtr = "quompass.backends.pyliqtr.adapter:PyLIQTRLogicalEstimator"

[project.entry-points."quompass.physical_estimators"]
analytical = "quompass.backends.mock:AnalyticalPhysicalEstimator"
azure = "quompass.backends.azure.adapter:AzurePhysicalEstimator"
mqt = "quompass.backends.mqt.adapter:MQTPhysicalEstimator"

[project.entry-points."quompass.qec_schemes"]
surface_code = "quompass.core.qec:SurfaceCode"
floquet_code = "quompass.core.qec:FloquetCode"
color_code = "quompass.core.qec:color_code"

[project.entry-points."quompass.algorithm_templates"]
shor = "quompass.templates.shor:ShorTemplate"
qpe = "quompass.templates.qpe:QPETemplate"
hamiltonian_sim = "quompass.templates.hamiltonian_sim:HamiltonianSimTemplate"
chemistry = "quompass.templates.chemistry:ChemistryTemplate"
grover = "quompass.templates.grover:GroverTemplate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring real backend packages",
    "optimize: marks tests requiring pymoo",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
